Fixed code overflow bug and also fixed refresh error in about page

--- a/src/components/content/Content.module.sass
+++ b/src/components/content/Content.module.sass
@@ -13,6 +13,9 @@
             padding-block: 2rem
             max-width: calc( 100% - 16rem )
 
+            pre
+                text-wrap: wrap
+
             h2, h3, h4, h5, h6
                 margin-block: 2em 0.5em
 
@@ -22,4 +25,4 @@
 // Media queries for responsive design 
 @media screen and (max-width: $small-screen)
     .content > .main-content > main
-        max-width: 90%
+        max-width: 95%
