--- a/src/pages/about/About.module.sass
+++ b/src/pages/about/About.module.sass
@@ -1,5 +1,4 @@
 .icon
-    width: 2em
     height: 2em
     color: white
     cursor: pointer
