--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -1,6 +1,6 @@
 body
     background: $bg-color-primary
-    //overflow-x:none
+    //overflow-x: hidden
     //!We should uncomment this when finishing to style, but leave it for now
     //! for debugging purposes
 
@@ -44,6 +44,7 @@ ul, ol
 code
     font-family: $font-code
     padding: 1rem
+    box-sizing: border-box
     color: $code-default-color
     unicode-bidi: plaintext
     display: block
